src/objects/auHonbuDirectDetail__c.object
<CustomObject>
    <fields>
        <fullName>PushNotificationStatus__c</fullName>
        <label>PushNotificationStatus</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SENT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubmissionDate__c</fullName>
        <formula>auHonbuDirect__r.SubmissionDate__c</formula>
        <label>SubmissionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TransmissionDate__c</fullName>
        <formula>auHonbuDirect__r.TransmissionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TransmissionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>VIEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>READ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAVORITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDDI_ACCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA_ACCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHOP_ACCESS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>auHonbuDirectDetail_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>auHonbuDirectKDDI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>auチャネルKDDI</label>
        <referenceTo>auHonbuDirect__c</referenceTo>
        <relationshipName>auHonbuDirectDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>auHonbuDirectSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>auチャネルSA</label>
        <referenceTo>auHonbuDirect__c</referenceTo>
        <relationshipName>auHonbuDirectDetailSA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>auHonbuDirectShop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>auチャネルShop</label>
        <referenceTo>auHonbuDirect__c</referenceTo>
        <relationshipName>auHonbuDirectDetail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>auHonbuDirect__c</fullName>
        <label>auチャネル</label>
        <referenceTo>auHonbuDirect__c</referenceTo>
        <relationshipName>auHonbuDirectDetail_MD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>auチャンネル詳細</label>
    <nameField>
        <displayFormat>HDD-{00000000}</displayFormat>
        <label>auHonbuDirectDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>